# budgie-next

./: .gitignore  Makefile.am  MprisGui.vala  README.md  autogen.sh  build.sh  common.mk  configure.ac  fullsize.vala  ncenter.vala  panel.vala  style.css  utils.vala
data/: Makefile.am  budgie-panel.gresource.xml  style.css
panel/: AudioPane.vala  IconTasklistApplet.vala  Makefile.am  MprisGui.vala  NetworkApplet.vala  TrayApplet.vala  budgie-next-panel  ncenter.vala  panel.vala  utils.vala
wm/: Makefile.am  core.c  legacy.c  legacy.h
